Tutorial component covers full scroll height, allowing it (and the tooltips) to be absolutely positioned while header is fixed. Optimized tooltip into single return statement - not completely separating "action" and "informative". Optimized code by creating basic overlay component for reuse. Added more sustainable logic for tooltip overlay - converting pixels to svg viewbox dimensions.

--- a/src/TestProgressTile.css
+++ b/src/TestProgressTile.css
@@ -78,11 +78,11 @@
 }
 
 .strike-through-animate-task-2::before {
-  bottom: calc(25% - 1.5px);
+  bottom: calc(25% - 1px);
 }
 
 .strike-through-animate-task-2::after {
-  bottom: calc(75% - 1.5px);
+  bottom: calc(75% - 1px);
 }
 
 .strike-through-animate-task-3 {
@@ -104,17 +104,17 @@
 }
 
 .strike-through-animate-task-3::before {
-  bottom: calc(16.67% - 1.5px); /* Adjusted for three lines */
+  bottom: calc(16.67% - 1px); /* Adjusted for three lines */
 }
 
 .strike-through-animate-task-3::after {
-  bottom: calc(50% - 1.5px); /* Adjusted for three lines */
+  bottom: calc(50% - 1px); /* Adjusted for three lines */
 }
 
 .strike-through-animate-task-3 .extra-strike::after {
   content: "";
   position: absolute;
-  bottom: calc(83.33% - 1.5px); /* Adjusted for three lines */
+  bottom: calc(83.33% - 1px); /* Adjusted for three lines */
   left: 0%;
   width: 100%;
   height: 1px;
